--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     ]
   },
   "devDependencies": {
-    "date-fns": "^2.11.1"
-  }
+    "date-fns": "^2.11.1",
+    "gh-pages": "^2.2.0"
+  },
+  "homepage": "https://jannehuo.github.io/swing/"
 }
