--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   "devDependencies": {
     "@types/react": "^16.9.33",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.3",
     "css-loader": "^3.5.1",
     "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^4.2.0",
+    "install": "^0.13.0",
+    "node-sass": "^4.13.1",
+    "npm": "^6.14.4",
+    "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
@@ -34,8 +39,10 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "date-fns": "^2.11.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "date-fns": "^2.11.1"
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
